# cpp-statsd-client

./: .travis.yml  CMakeLists.txt  Makefile  README.md  package.xml
.github/workflows/: coverage.yml  lint.yml  linux.yaml  linux.yml  test.yml  win.yml  windows.yml
include/cpp-statsd-client/: StatsdClient.hpp  UDPSender.hpp
src/: Socket.hpp  StatsdClient.hpp  UDPSender.hpp
tests/: StatsdServer.hpp  testStatsdClient.cpp
